--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/croma/css/style.css">
 
-    <script src="/js/script.js"></script>
+    <script src="/croma/js/script.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="/croma//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <script type="text/javascript" src="/croma//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
         <nav class="nav-sticky">
             <div class="navbar">
                 <div class="logo-navbar navbar">
-                    <img src="/images/logo.svg" alt="Croma logo">
+                    <img src="/croma/images/logo.svg" alt="Croma logo">
                 </div>
                 <div class="menu-navbar navbar">
                     <div class="menu-icon">
@@ -92,28 +92,28 @@
 <section class="hero-section">
 <div class="hero-large-section hero-scroll">
     <div class="hero-images hero-lg-images">
-        <img src="/images/hero-image1.webp" alt="images">
+        <img src="/croma/images/hero-image1.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image2.webp" alt="images">
+        <img src="/croma/images/hero-image2.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image3.webp" alt="images">
+        <img src="/croma/images/hero-image3.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image4.webp" alt="images">
+        <img src="/croma/images/hero-image4.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image5.webp" alt="images">
+        <img src="/croma/images/hero-image5.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image6.webp" alt="images">
+        <img src="/croma/images/hero-image6.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image7.webp" alt="images">
+        <img src="/croma/images/hero-image7.webp" alt="images">
     </div>
     <div class="hero-images  hero-lg-images">
-        <img src="/images/hero-image8.webp" alt="images">
+        <img src="/croma/images/hero-image8.webp" alt="images">
     </div>
     
 </div>
@@ -121,28 +121,28 @@
 <div class="hero-sm-section ">
     <div class="hero-scroll">
     <div class="hero-images  hero-sm-images">
-        <img src="/images/hero-image-sm1.webp" alt="images">
+        <img src="/croma/images/hero-image-sm1.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm2.webp" alt="images">
+        <img src="/croma/images/hero-image-sm2.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm3.webp" alt="images">
+        <img src="/croma/images/hero-image-sm3.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm4.webp" alt="images">
+        <img src="/croma/images/hero-image-sm4.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm5.webp" alt="images">
+        <img src="/croma/images/hero-image-sm5.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm6.webp" alt="images">
+        <img src="/croma/images/hero-image-sm6.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm7.webp" alt="images">
+        <img src="/croma/images/hero-image-sm7.webp" alt="images">
     </div>
     <div class="hero-images hero-sm-images">
-        <img src="/images/hero-image-sm8.webp" alt="images">
+        <img src="/croma/images/hero-image-sm8.webp" alt="images">
     </div>
 </div>
 </div>
@@ -154,64 +154,64 @@
 <section class="category-section">
     <div class="categories">
         <div class="category-image">
-           <img src="/images/category-mobile.webp" alt="">
+           <img src="/croma/images/category-mobile.webp" alt="">
         </div>
         <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-            <img src="/images/category-mobile.webp" alt="">
+            <img src="/croma/images/category-mobile.webp" alt="">
          </div>
          <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-              <img src="/images/category-mobile.webp" alt="">
+              <img src="/croma/images/category-mobile.webp" alt="">
            </div>
            <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-              <img src="/images/category-mobile.webp" alt="">
+              <img src="/croma/images/category-mobile.webp" alt="">
            </div>
            <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-              <img src="/images/category-mobile.webp" alt="">
+              <img src="/croma/images/category-mobile.webp" alt="">
            </div>
            <div class="category-image">
-             <img src="/images/category-mobile.webp" alt="">
+             <img src="/croma/images/category-mobile.webp" alt="">
           </div>
           <div class="category-image">
-              <img src="/images/category-mobile.webp" alt="">
+              <img src="/croma/images/category-mobile.webp" alt="">
            </div>
            
 
@@ -223,15 +223,15 @@
 <section class="bank-offers">
     <div class="offers">
         <div class="offers-image">
-        <img src="/images/bank-offer1.webp" alt=""></div>
+        <img src="/croma/images/bank-offer1.webp" alt=""></div>
         <div class="offers-image">
-        <img src="/images/bank-offer2.webp" alt=""></div>
+        <img src="/croma/images/bank-offer2.webp" alt=""></div>
     </div>
     <div class="offers-sm">
         <div class="offers-image-sm">
-        <img src="/images/bank-offer-sm1.webp" alt=""></div>
+        <img src="/croma/images/bank-offer-sm1.webp" alt=""></div>
         <div class="offers-image-sm">
-        <img src="/images/bank-offer-sm2.webp" alt=""></div>
+        <img src="/croma/images/bank-offer-sm2.webp" alt=""></div>
     </div>
 </section>
 
