--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     
-  <link rel="stylesheet" type="text/css" href="/croma//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <script type="text/javascript" src="/croma//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css" />
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
     
 </head>
 
