--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     
 </div>
 
-<div class="hero-sm-section ">
-    <div class="hero-scroll">
+<div class="hero-sm-section " style="display:none;">
+    <div class="hero-scroll-sm">
     <div class="hero-images  hero-sm-images">
         <img src="/croma/images/hero-image-sm1.webp" alt="images">
     </div>
