--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     
 </div>
 
-<div class="hero-sm-section " style="display:none;">
+<div class="hero-section">
     <div class="hero-scroll-sm">
     <div class="hero-images  hero-sm-images">
         <img src="/croma/images/hero-image-sm1.webp" alt="images">
@@ -271,6 +271,21 @@
 
         });
 
+          $('.hero-scroll-sm').slick({
+            infinite: true,
+            speed: 500,
+            fade: true,
+            cssEase: 'linear',
+
+
+            prevArrow: '<button class="custom-previous custom-arrow-btn slick-arrow" type="button" aria-label="Previous" style=""><svg class="flickity-button-icon" viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow"></path></svg></button>',
+            nextArrow: '<button class="custom-next custom-arrow-btn slick-arrow" type="button" aria-label="Next" style=""><svg class="flickity-button-icon" viewBox="0 0 100 100"><path d="M 10,50 L 60,100 L 70,90 L 30,50  L 70,10 L 60,0 Z" class="arrow" transform="translate(100, 100) rotate(180) "></path></svg></button>',
+
+        });
+
+
+      
+
 
         $('.categories').slick({
             infinite: true,
@@ -329,7 +344,7 @@
 
         });
 
-console.log("code updated1")
+console.log("code updated2")
     })
 
 
