--- a/index.html
+++ b/index.html
@@ -300,6 +300,8 @@
                     breakpoint: 1024,
                     settings: {
                         arrows: false,
+                          slidesToShow: 5,
+                        slidesToScroll: 3,
                         centerMode: true,
                         centerPadding: '60px',
                         slidesToShow: 8
@@ -311,6 +313,8 @@
                     settings: {
                         arrows: false,
                         centerMode: true,
+                        slidesToShow: 4,
+                        slidesToScroll: 2,
                         centerPadding: '60px',
                         slidesToShow: 5
                     }
@@ -320,6 +324,8 @@
                     breakpoint: 425,
                     settings: {
                         arrows: false,
+                          slidesToShow: 2,
+                        slidesToScroll: 2,
                         centerMode: true,
                         centerPadding: '60px',
                         slidesToShow: 0
