--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
                           slidesToShow: 5,
                         slidesToScroll: 3,
                         centerMode: true,
-                        centerPadding: '60px',
-                        slidesToShow: 8
+                        centerPadding: '50px'
+                       
                     }
                 },
 
@@ -315,8 +315,8 @@
                         centerMode: true,
                         slidesToShow: 4,
                         slidesToScroll: 2,
-                        centerPadding: '60px',
-                        slidesToShow: 5
+                        centerPadding: '40px'
+             
                     }
                 },
 
@@ -327,7 +327,7 @@
                           slidesToShow: 2,
                         slidesToScroll: 2,
                         centerMode: true,
-                        centerPadding: '60px',
+                        centerPadding: '20px',
                         slidesToShow: 0
                     }
                 },
@@ -337,7 +337,7 @@
                     settings: {
                         arrows: false,
                         centerMode: true,
-                        centerPadding: '60px',
+                        centerPadding: '20px',
                         slidesToShow: 0
                     }
                 },
@@ -350,7 +350,7 @@
 
         });
 
-console.log("code updated2")
+console.log("code updated3")
     })
 
 
