--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 
-    <link rel="stylesheet" href="croma/css/style.css">
+    <link rel="stylesheet" href="/croma/css/style.css">
 
-    <script src="croma/js/script.js"></script>
+    <script src="/croma/js/script.js"></script>
 
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
@@ -32,7 +32,7 @@
         <nav class="nav-sticky">
             <div class="navbar">
                 <div class="logo-navbar navbar">
-                    <img src="croma/images/logo.svg" alt="Croma logo">
+                    <img src="/croma/images/logo.svg" alt="Croma logo">
                 </div>
                 <div class="menu-navbar navbar">
                     <div class="menu-icon">
@@ -96,28 +96,28 @@
     <section class="hero-section">
         <div class="hero-large-section hero-scroll">
             <div class="hero-images hero-lg-images">
-                <img src="croma/images/hero-image1.webp" alt="images">
+                <img src="/croma/images/hero-image1.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image2.webp" alt="images">
+                <img src="/croma/images/hero-image2.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image3.webp" alt="images">
+                <img src="/croma/images/hero-image3.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image4.webp" alt="images">
+                <img src="/croma/images/hero-image4.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image5.webp" alt="images">
+                <img src="/croma/images/hero-image5.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image6.webp" alt="images">
+                <img src="/croma/images/hero-image6.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image7.webp" alt="images">
+                <img src="/croma/images/hero-image7.webp" alt="images">
             </div>
             <div class="hero-images  hero-lg-images">
-                <img src="croma/images/hero-image8.webp" alt="images">
+                <img src="/croma/images/hero-image8.webp" alt="images">
             </div>
 
         </div>
@@ -125,28 +125,28 @@
         <div class="hero-section">
             <div class="hero-scroll-sm">
                 <div class="hero-images  hero-sm-images">
-                    <img src="croma/images/hero-image-sm1.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm1.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm2.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm2.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm3.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm3.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm4.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm4.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm5.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm5.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm6.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm6.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm7.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm7.webp" alt="images">
                 </div>
                 <div class="hero-images hero-sm-images">
-                    <img src="croma/images/hero-image-sm8.webp" alt="images">
+                    <img src="/croma/images/hero-image-sm8.webp" alt="images">
                 </div>
             </div>
         </div>
@@ -158,64 +158,64 @@
     <section class="category-section">
         <div class="categories">
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
             <div class="category-image">
-                <img src="croma/images/category-mobile.webp" alt="">
+                <img src="/croma/images/category-mobile.webp" alt="">
             </div>
 
 
@@ -227,18 +227,18 @@
     <section class="bank-offers-section">
         <div class="offers">
             <div class="offers-image">
-                <img src="croma/images/bank-offer1.webp" alt="">
+                <img src="/croma/images/bank-offer1.webp" alt="">
             </div>
             <div class="offers-image">
-                <img src="croma/images/bank-offer2.webp" alt="">
+                <img src="/croma/images/bank-offer2.webp" alt="">
             </div>
         </div>
         <div class="offers-sm">
             <div class="offers-image-sm">
-                <img src="croma/images/bank-offer-sm1.webp" alt="">
+                <img src="/croma/images/bank-offer-sm1.webp" alt="">
             </div>
             <div class="offers-image-sm">
-                <img src="croma/images/bank-offer-sm2.webp" alt="">
+                <img src="/croma/images/bank-offer-sm2.webp" alt="">
             </div>
         </div>
     </section>
@@ -250,10 +250,10 @@
         <h3>Exciting Bank Offers For You</h3>
         <div class="federal-bank-offer">
             <div class="federal-bank-image">
-                <img src="croma/images/federal-bank1.webp" alt="">
+                <img src="/croma/images/federal-bank1.webp" alt="">
             </div>
             <div class="federal-bank-image">
-                <img src="croma/images/federal-bank2.webp" alt="">
+                <img src="/croma/images/federal-bank2.webp" alt="">
             </div>
         </div>
     </section>
@@ -265,7 +265,7 @@
     <section class="new-fav-section">
         <h3>Our New Favourites</h3>
         <div class="new-fav-image">
-            <img src="croma/images/new-fav.webp" alt="">
+            <img src="/croma/images/new-fav.webp" alt="">
         </div>
     </section>
 
@@ -277,13 +277,13 @@
         <h3>Byte into Apple Accessories</h3>
         <div class="apple-accessories-images">
             <div class="accessories">
-                <img src="croma/images/apple-accessories1.webp" alt="">
+                <img src="/croma/images/apple-accessories1.webp" alt="">
             </div>
             <div class="accessories">
-                <img src="croma/images/apple-accessories2.webp" alt="">
+                <img src="/croma/images/apple-accessories2.webp" alt="">
             </div>
             <div class="accessories">
-                <img src="croma/images/apple-accessories3.webp" alt="">
+                <img src="/croma/images/apple-accessories3.webp" alt="">
             </div>
         </div>
     </section>
@@ -295,18 +295,18 @@
         <div class="whats-hot">
         <div class="left-whats-hot">
             <div class="whats-hot-image">
-                <img src="croma/images/what-hot1.webp" alt="">
+                <img src="/croma/images/what-hot1.webp" alt="">
             </div>
             <div class="whats-hot-image">
-                <img src="croma/images/what-hot2.webp" alt="">
+                <img src="/croma/images/what-hot2.webp" alt="">
             </div>
         </div>
         <div class="right-whats-hot">
             <div class="whats-hot-image">
-                <img src="croma/images/what-hot3.webp" alt="">
+                <img src="/croma/images/what-hot3.webp" alt="">
             </div>
             <div class="whats-hot-image">
-                <img src="croma/images/what-hot4.webp" alt="">
+                <img src="/croma/images/what-hot4.webp" alt="">
             </div>
         </div>
     </div>
@@ -317,10 +317,10 @@
     <h3>Limited Time Deals</h3>
     <div class="limited-deals-image">
         <div class="deals-image">
-            <img src="croma/images/limited-deals1.webp" alt="">
+            <img src="/croma/images/limited-deals1.webp" alt="">
         </div>
         <div class="deals-image">
-            <img src="croma/images/limited-deals2.webp" alt="">
+            <img src="/croma/images/limited-deals2.webp" alt="">
         </div>
     </div>
 </section>
@@ -332,9 +332,9 @@
     <div class="unboxed">
         <div class="unboxed-image">
             <div class="unboxed-lg-image">
-                <img src="croma/images/unboxed1.webp" class="unboxed-lg" alt=""></div>
+                <img src="/croma/images/unboxed1.webp" class="unboxed-lg" alt=""></div>
                 <div class="unboxed-sm-image">
-                <img src="croma/images/unboxed-sm1.webp" class="unboxed-sm" alt=""></div>
+                <img src="/croma/images/unboxed-sm1.webp" class="unboxed-sm" alt=""></div>
         </div>
         <div class="unboxed-text">
         <h1> Lenovo Tab Plus review </h1>
@@ -350,9 +350,9 @@
     <div class="unboxed">
         <div class="unboxed-image">
             <div class="unboxed-lg-image">
-                <img src="croma/images/unboxed2.webp" class="unboxed-lg" alt=""></div>
+                <img src="/croma/images/unboxed2.webp" class="unboxed-lg" alt=""></div>
                 <div class="unboxed-sm-image">
-                <img src="croma/images/unboxed-sm2.webp" class="unboxed-sm" alt=""></div>
+                <img src="/croma/images/unboxed-sm2.webp" class="unboxed-sm" alt=""></div>
         </div>
         <div class="unboxed-text">
         <h1> I tried the Perplexity AI app and it’s a smarter way to get your queries answered </h1>
@@ -368,9 +368,9 @@
     <div class="unboxed">
         <div class="unboxed-image">
             <div class="unboxed-lg-image">
-                <img src="croma/images/unboxed3.webp" class="unboxed-lg" alt=""></div>
+                <img src="/croma/images/unboxed3.webp" class="unboxed-lg" alt=""></div>
                 <div class="unboxed-sm-image">
-                <img src="croma/images/unboxed-sm3.webp" class="unboxed-sm" alt=""></div>
+                <img src="/croma/images/unboxed-sm3.webp" class="unboxed-sm" alt=""></div>
         </div>
         <div class="unboxed-text">
         <h1> What is Apple Watch for kids? </h1>
@@ -386,9 +386,9 @@
     <div class="unboxed">
         <div class="unboxed-image">
             <div class="unboxed-lg-image">
-            <img src="croma/images/unboxed4.webp" class="unboxed-lg" alt=""></div>
+            <img src="/croma/images/unboxed4.webp" class="unboxed-lg" alt=""></div>
             <div class="unboxed-sm-image">
-            <img src="croma/images/unboxed-sm4.webp" class="unboxed-sm" alt=""></div>
+            <img src="/croma/images/unboxed-sm4.webp" class="unboxed-sm" alt=""></div>
         </div>
         <div class="unboxed-text">
         <h1> 7 ways to use your dry and wet vacuum cleaners</h1>
